--- a/curriculum.html
+++ b/curriculum.html
@@ -134,6 +134,10 @@
 
     </div>
 
+    <button id="miBoton">INFORMACIÓN ADICIONAL</button>
+
+    <script src="evento.js"></script>
+
 </div>
 
 </body>
